# django-render-static

./: .codecov.yml  .gitignore  .safety-policy.yml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  SECURITY.md  check.sh  justfile  manage.py  pyproject.toml  pytest.ini  readthedocs.yaml  setup.cfg
.github/workflows/: lint.yml  release.yml  scorecard.yml  test.yml  update_coc.yml  zizmor.yml
django_static_templates/: __init__.py  apps.py  backends.py  engine.py  loaders.py  origin.py
django_static_templates/management/commands/: generate_static.py
django_static_templates/templatetags/: django_static_templates.py
django_static_templates/tests/: defines2.py  settings.py  tests.py  urls.py  views.py
django_static_templates/tests/app1/: __init__.py  apps.py
django_static_templates/tests/app2/: __init__.py  apps.py
django_static_templates/tests/expected/: defines1.js  defines2.js  nominal1.html  nominal_jinja2.html
django_static_templates/tests/static_templates/: nominal_fs.html
doc/: .readthedocs.yaml  broken_links.py  requirements.txt
doc/source/: changelog.rst  commands.rst  conf.py  configuration.rst  index.rst  installation.rst  intro.rst  migration.rst  quick.rst  reference.rst  runtimes.rst  signals.rst  templatetags.rst  tldr.rst  usage.rst
doc/source/reference/: backends.rst  completers.rst  context.rst  engine.rst  exceptions.rst  index.rst  loaders.rst  origin.rst  placeholders.rst  resource.rst  templatetags.rst
doc/source/reference/transpilers/: defines_to_js.rst  enums_to_js.rst  index.rst  urls_to_js.rst
render_static/: __init__.py  apps.py  backends.py  context.py  engine.py  enum.py  exceptions.py  javascript.py  loaders.py  origin.py  placeholders.py  resource.py  url_tree.py
render_static/backends/: base.py  django.py  jinja2.py
render_static/loaders/: __init__.py  django.py  jinja2.py  mixins.py
render_static/management/commands/: render_static.py  renderstatic.py
render_static/static_templates/render_static/: defines.js  enums.js  urls.js
render_static/templatetags/: render_static.py
render_static/tests/: _jinja2_tests.py  bad_pattern.py  defines.py  defines2.py  empty_defines.py  ex_urls.py  examples_tests.py  jinja2_tests.py  js_reverse_urls.py  js_tests.py  settings.py  spa_urls.py  test_core.py  test_examples.py  test_jinja2.py  test_js.py  test_traversal.py  test_web.py  test_yaml.py  tests.py  traverse_tests.py  urls.py  urls2.py  urls3.py  urls4.py  urls5.py  urls_bug_13.py  urls_bug_65.py  urls_default_args.py  urls_precedence.py  views.py  web_tests.py  yaml_tests.py
render_static/tests/app1/: __init__.py  apps.py  urls.py
render_static/tests/app2/: __init__.py  apps.py  urls.py
render_static/tests/app3/: __init__.py  apps.py  urls.py
render_static/tests/chain/: apps.py  urls.py
render_static/tests/enum/: apps.py  defines.py  models.py  urls.py
render_static/tests/enum/migrations/: 0001_initial.py
render_static/tests/enum_app/: apps.py  defines.py  enums.py  models.py  urls.py
render_static/tests/examples/: apps.py  models.py  urls.py
render_static/tests/expected/: HELLO_U.html  app2_template2.html  ctx_override.html  dest_override.html  glb2_template1.html  glb2_template4.html  glb_template3.html  hello_l.html  inheritance.html  multi_2_jinja2.html  wildcard_test.js
render_static/tests/resources/: bad.pickle  bad_code.py  context.pickle  context.py  context.yaml  context_embedded.py  override.yaml
render_static/tests/spa/: apps.py  urls.py  views.py
render_static/tests/static_templates/: multi_test.jinja2  nominal.jinja2
render_static/tests/traverse/: models.py  module1.py
render_static/transpilers/: __init__.py  base.py  classes_to_js.py  defines_to_js.py  enums_to_js.py  modules_to_js.py  urls_to_js.py
src/render_static/: __init__.py  engine.py  exceptions.py  placeholders.py
src/render_static/backends/: __init__.py  django.py  jinja2.py
src/render_static/loaders/: __init__.py  django.py  jinja2.py  mixins.py  utils.py
src/render_static/management/: completers.py
src/render_static/templatetags/: render_static.py
src/render_static/transpilers/: base.py  defines_to_js.py  enums_to_js.py  urls_to_js.py
static_templates/: __init__.py  apps.py  backends.py  engine.py  exceptions.py  loaders.py  placeholders.py
static_templates/management/commands/: generate_static.py  render_static.py
static_templates/static_templates/static_templates/: urls.js
static_templates/templatetags/: static_templates.py  static_templates_filters.py
static_templates/tests/: __init__.py  apps.py  bad_pattern.py  defines.py  defines2.py  settings.py  tests.py  urls.py
static_templates/tests/app1/: __init__.py  apps.py  urls.py
static_templates/tests/app2/: __init__.py  apps.py  urls.py
static_templates/tests/app3/: __init__.py  apps.py
static_templates/tests/expected/: app2_jinja2.html  ctx_override2.html  nominal2.html
tests/: bad_pattern.py  conftest.py  context.py  defines.py  ex_urls.py  settings.py  spa_urls.py  test_batch.py  test_batch_jinja2.py  test_core.py  test_examples.py  test_jinja2.py  test_js.py  test_traversal.py  test_web.py  test_yaml.py  urls.py  urls2.py  urls_bug_13.py  urls_default_args.py
tests/app1/: apps.py
tests/app2/: apps.py  urls.py
tests/app2/custom_templates/: nominal_fs2.html
tests/app3/: apps.py  urls.py
tests/batch_templates/: file.txt
tests/batch_templates/folder1/: file1_1.txt  file1_2.txt
tests/batch_templates/folder2/: file2_1.txt  file2_2.txt
tests/chain/: apps.py  urls.py
tests/enum_app/: apps.py  enums.py  models.py
tests/enum_app/templatetags/: enum_test.py
tests/examples/: models.py  urls.py
tests/expected/: ctx_override_cmdline.html  glb_template1.html  inheritance_jinja2.html  multi_1_jinja2.html  nominal1.html  nominal_fs.html
tests/resources/: bad.yaml  context.json  context.py  context_embedded.py
tests/spa/: apps.py
tests/static_templates/: batch_fs_test1.html
tests/static_templates/exclusive/: template2.html
tests/traverse/: models.py
tests/traverse/sub_pkg/: module2.py
(+42 files in other folders)
