[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-render-static"
version = "3.5.1"
description = "Use Django's template engine to render static files at deployment or package time. Includes transpilers for extending Django's url reversal and enums to JavaScript."
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Brian Kohan", email = "bckohan@gmail.com"},
]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"
repository = "https://github.com/bckohan/django-render-static"
homepage = "https://django-render-static.readthedocs.io"
keywords = ["django", "static", "templates", "javascript", "url", "reverse", "defines", "transpiler", "transpile", "enum"]
dependencies = [
    "Django>=4.2,<6.1",
    "django-typer>=3.0,<4.0"
]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/render_static"]

[project.optional-dependencies]
PyYAML = ["PyYAML>=5.1,<7.0"]
Jinja2 = ["Jinja2>=2.9,<4.0"]

[project.urls]
"Homepage" = "https://django-render-static.readthedocs.io"
"Documentation" = "https://django-render-static.readthedocs.io"
"Repository" = "https://github.com/bckohan/django-render-static"
"Issues" = "https://github.com/bckohan/django-render-static/issues"
"Changelog" = "https://django-render-static.readthedocs.io/en/stable/changelog.html"
"Code_of_Conduct" = "https://github.com/bckohan/django-render-static/blob/main/CODE_OF_CONDUCT.md"

[dependency-groups]
testing = [
    # precommit has a transitive dependency on pyyaml which messes up our tests
    # so we have to have a separate test group
    "deepdiff>=8.3.0",
    "django-enum>=2.1.0",
    "enum-properties>=2.2.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "python-dateutil>=2.9.0.post0",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
]
dev = [
    "deepdiff>=8.3.0",
    "django-enum>=2.1.0",
    "django-stubs[compatible-mypy]>=5.1.3",
    "enum-properties>=2.2.2",
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "mypy>=1.15.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "python-dateutil>=2.9.0.post0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
    "selenium>=4.29.0",
    "tomlkit>=0.13.2",
    "types-pyyaml>=6.0.12.20241230",
    "webdriver-manager>=4.0.2",
]
docs = [
    "doc8>=1.1.2",
    "docutils>=0.21.2",
    "furo>=2024.8.6",
    "readme-renderer[md]>=44.0",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-typer[pdf]>=0.5.1",
    "sphinxcontrib-django>=2.5",
]

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
local_partial_types = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
mypy_path = "src"
modules = "render_static"


[tool.doc8]
ignore-path = "doc/build"
max-line-length = 100
sphinx = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
addopts = [
    "--strict-markers",
    "--cov=render_static",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]

[tool.coverage.run]
branch = true
omit = [
  "tests/app1/static_jinja2/batch_test/**/*",
  "tests/app1/static_jinja2/**/*",
  "tests/app2/static_jinja2/**/*"
]
source = ["render_static"]
relative_files = true
command_line = "-m pytest --cov=render_static"

[tool.coverage.paths]
source = [
    "src/render_static"
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "examples",
    "tests/resources/bad_code.py"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*",
]

[tool.pyright]
exclude = ["tests/**/*"]
include = [
    "src/render_static"
]
